<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainAdmin">

    <FrameLayout
        android:id="@+id/container_admin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">


        <Button
            android:id="@+id/meterhabi"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/meterhabitacom" />

        <Button
            android:id="@+id/verhabi"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/verhabitacion" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/categorias"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/catego" />

        <Button
            android:id="@+id/verreserva"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/verreserva" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical">

        <Button
            android:id="@+id/verclientes"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/verclientes" />

        <Button
            android:id="@+id/salir"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/salir">

        </Button>

    </LinearLayout>


</RelativeLayout>