<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresarCategoria">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/meter_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/metercatego" />

        <Button
            android:id="@+id/categorias_si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrecat" />

        <Button
            android:id="@+id/categorias_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <ImageView
            android:id="@+id/fotoCategoria"
            android:layout_width="411dp"
            android:layout_height="132dp"
            android:src="@android:drawable/btn_dialog" />
    </LinearLayout>

</RelativeLayout>
</FrameLayout>