<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_adminadapter"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@android:drawable/btn_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nombre_adminadapter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/nombre_adminadapter"
            android:textSize="25dp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/colorHint"
            />

        <TextView
            android:id="@+id/precio_adminadapter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/precio_adminadapter"
            android:textSize="25dp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/colorHint"
            />

        <TextView
            android:id="@+id/categoria_adminadapter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/categoria_adminadapter"
            android:textSize="25dp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/colorHint"/>
    </LinearLayout>

</LinearLayout>