<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="150dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true">




        <ImageView
            android:id="@+id/imagenhabi_reserva"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_dialog"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:gravity="center"
            android:layout_marginLeft="150dp"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            >


            <TextView
                android:id="@+id/textView3_hab"
                android:layout_width="match_parent"
                android:fontFamily="@font/paradoid"
                android:layout_height="wrap_content"
                android:text="@string/textView3_hab"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/textView4_da"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paradoid"
                android:text="@string/textView4_da"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textAlignment="center"
                android:fontFamily="@font/paradoid"
                android:id="@+id/textView8_preTotal"
                android:textColor="@color/textColor"
                android:text="@string/textView8_preTotal">

            </TextView>


        </LinearLayout>



        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="300dp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/estado_enreserva"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/btn_dialog"
                android:scaleType="centerCrop"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="95dp"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:background="@color/verdeGuapo2">


            <TextView
                android:id="@+id/textView5_nombrehabitacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView5_nombrehabitacion"
                android:textSize="20dp"
                android:fontFamily="@font/paradoid"
                android:textColor="@color/textColor"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView6_fechareserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView6_fechareserva"
                android:textSize="20dp"
                android:fontFamily="@font/paradoid"
                android:textColor="@color/textColor"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:fontFamily="@font/paradoid"
                android:textColor="@color/textColor"
                android:textAlignment="center"
                android:id="@+id/textView7_preciototal"
                android:text="@string/textView7_preciototal">

            </TextView>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="-30dp"
        android:background="@color/verdeGuapo2">

    </LinearLayout>

</LinearLayout>