<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/layout_grid2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <ImageView
                android:id="@+id/imagen_habitacion_grid2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/btn_dialog"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/grid2_nodisponible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/nodisponible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/grid2_hotel"
                    android:text="@string/grid2_hotel">

                </TextView>

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/grid2_habitacion"
                    android:text="@string/grid2_habitacion">


                </TextView>

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/grid2_precio"
                    android:text="@string/grid2_precio">

                </TextView>


            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>



</LinearLayout>